--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iLearn File Browser</title>
+    <title>ILearn Last-Minute Reckoner 2025</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -20,8 +20,8 @@
                     <img src="css/logo.png" alt="iLearn Logo">
                 </div>
                 <div class="col">
-                    <h1 class="mb-0">iLearn File Browser</h1>
-                    <p class="mb-0 lead">Access your study materials easily</p>
+                    <h1 class="mb-0">ILearn Last-Minute Reckoner 2025</h1>
+                    <p class="mb-0 lead">Your Last Minute Prelims Revision Companion</p>
                 </div>
             </div>
         </div>
@@ -79,7 +79,7 @@
     <!-- Footer Section -->
     <footer class="bg-light py-3 mt-auto">
         <div class="container text-center">
-            <p class="text-muted mb-0">iLearn File Browser &copy; 2025</p>
+            <p class="text-muted mb-0">ILearn Last-Minute Reckoner &copy; 2025</p>
         </div>
     </footer>
 
